--- a/src/DanielBundle/Resources/views/inc/head.html.twig
+++ b/src/DanielBundle/Resources/views/inc/head.html.twig
@@ -8,3 +8,4 @@
 <script type="text/javascript" src="{{ asset('bundles/daniel/js/libs/jquery-2.1.1.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('bundles/daniel/js/kickstart.js') }}"></script>
 {#<script type="text/javascript" src="{{ asset('bundles/tubemeshmain/js/libs/select2/select2.min.js') }}"></script>#}
+<link rel="alternate" type="application/rss+xml" title="Feed" href="{{ url('rss') }}">
